err/bitiverse.err
Listing '.'...
Listing './bin'...
Listing './bitcoin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/PIL/.libs'...
Listing './lib/python3.5/site-packages/Pillow-5.0.0.dist-info'...
Listing './lib/python3.5/site-packages/bitcoin'...
Listing './lib/python3.5/site-packages/bitcoin-1.1.42.egg-info'...
Listing './lib/python3.5/site-packages/bitiverse'...
Compiling './lib/python3.5/site-packages/bitiverse/generator.py'...
***   File "./lib/python3.5/site-packages/bitiverse/generator.py", line 81
    print "creating image"
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bitiverse/image_writer.py'...
***   File "./lib/python3.5/site-packages/bitiverse/image_writer.py", line 23
    print n
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bitiverse/messaging.py'...
***   File "./lib/python3.5/site-packages/bitiverse/messaging.py", line 65
    print "INSUFFICIENT BITCOIN"
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bitiverse/ownership.py'...
***   File "./lib/python3.5/site-packages/bitiverse/ownership.py", line 57
    print "Searching through known owners."
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bitiverse/pixelwriter.py'...
***   File "./lib/python3.5/site-packages/bitiverse/pixelwriter.py", line 56
    print str(h) + " is not a safe output to spend"
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bitiverse/pycoin_writer.py'...
***   File "./lib/python3.5/site-packages/bitiverse/pycoin_writer.py", line 34
    print tx.as_hex()
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bitiverse/reader.py'...
***   File "./lib/python3.5/site-packages/bitiverse/reader.py", line 40
    print "COULD NOT PULL TXHASH {0} FROM BLOCKCYPHER.".format(txhash)
                                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/bitiverse-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/ecdsa'...
Listing './lib/python3.5/site-packages/ecdsa-0.13.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pybitcointools'...
Compiling './lib/python3.5/site-packages/pybitcointools/bci.py'...
***   File "./lib/python3.5/site-packages/pybitcointools/bci.py", line 16
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pybitcointools-1.1.15.egg-info'...
Listing './lib/python3.5/site-packages/pycoin'...
Listing './lib/python3.5/site-packages/pycoin/blockchain'...
Listing './lib/python3.5/site-packages/pycoin/cmds'...
Listing './lib/python3.5/site-packages/pycoin/coins'...
Listing './lib/python3.5/site-packages/pycoin/contrib'...
Listing './lib/python3.5/site-packages/pycoin/convention'...
Listing './lib/python3.5/site-packages/pycoin/ecdsa'...
Listing './lib/python3.5/site-packages/pycoin/ecdsa/native'...
Listing './lib/python3.5/site-packages/pycoin/key'...
Listing './lib/python3.5/site-packages/pycoin/message'...
Listing './lib/python3.5/site-packages/pycoin/networks'...
Listing './lib/python3.5/site-packages/pycoin/serialize'...
Listing './lib/python3.5/site-packages/pycoin/services'...
Listing './lib/python3.5/site-packages/pycoin/tx'...
Listing './lib/python3.5/site-packages/pycoin/tx/pay_to'...
Listing './lib/python3.5/site-packages/pycoin/tx/script'...
Listing './lib/python3.5/site-packages/pycoin/wallet'...
Listing './lib/python3.5/site-packages/pycoin-0.80.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
